# ceph

./: .contributormap.csv  .githubmap  CMakeLists.txt  PendingReleaseNotes  REA  READ  TODO  ceph.spec.in  install-deps.sh  tentacle.txt
.github/workflows/: releng-audit.yaml
admin/: build-doc
cmake/modules/: BuildRocksDB.cmake  FindSQLite3.cmake
container/: Containerfile
debian/: ceph-mgr-modules-core.install  control  libcephsqlite-dev.install  libcephsqlite.install  rules
doc/: architecture.rst  glossary.rst
doc/cephfs/: add-remove-mds.rst  administration.rst  cephfs-mirroring.rst  cephfs-shell.rst  client-auth.rst  client-config-ref.rst  createfs.rst  file-layouts.rst  fs-volumes.rst  index.rst  mds-config-ref.rst  multimds.rst  shell.rst
doc/dev/: cephfs-mirroring.rst  cephx.rst  mon-bootstrap.rst
doc/install/: manual-deployment.rst
doc/mgr/: administrator.rst  smb.rst
doc/radosgw/: STSLite.rst
doc/releases/: reef.rst
qa/: valgrind.supp
qa/cephfs/: begin.yaml
qa/crontab/: teuthology-cronjobs
qa/objectstore/: bluestore.yaml
qa/overrides/: upgrade_ignorelist_health.yaml
qa/tasks/: ceph.py  ceph_deploy.py  ceph_fuse.py  ceph_manager.py  ceph_test_case.py  cephadm.py  check_counter.py  daemonwatchdog.py  fwd_scrub.py  (+8 more)
src/: CMakeLists.txt  SimpleRADOSStriper.cc  SimpleRADOSStriper.h  ceph_mds.cc  ceph_mon.cc  ceph_osd.cc  ceph_table.cc  krbd.cc  libcephfs.cc  libcephsqlite.cc  mount.fuse.ceph  vstart.sh
src/test/libcephsqlite/: CMakeLists.txt  main.cc  unittest_libcephsqlite.cc
systemd/: ceph-mon@.service.in  ceph-osd@.service.in
(+746 files in other folders)
